--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
   <div class="container">
 
     <section class="profile">
-      <header>
-        <img src="assets/images/image-jeremy.png" alt="Jeremy" class="image">
+    <header class="header-profile">
+        <img src="assets/images/image-jeremy.png" alt="Jeremy" class="profile-image">
 
-        <div>
+        <div class="user">
           <span>Report for</span>
-          <h2 class="name">Jeremy Robson</h2>
+          <h2 class="user__name">Jeremy Robson</h2>
         </div>
       </header>
 
       <footer>
-        <ul>
+        <ul class="menu">
           <li>Daily</li>
           <li>Weekly</li>
           <li>Monthly</li>
