--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap" rel="stylesheet">
 
-
-  <link rel="stylesheet" href="/assets/styles/colors.css">
-  <link rel="stylesheet" href="/assets/styles/style.css">
+  <link rel="stylesheet" href="css/style.css">
   
   <title>Frontend Mentor | Time tracking dashboard</title>
   <style>
@@ -24,17 +22,17 @@
   <div class="container">
 
     <section class="profile">
-      <header>
-        <img src="assets/images/image-jeremy.png" alt="Jeremy" class="image">
+    <header class="header-profile">
+        <img src="assets/images/image-jeremy.png" alt="Jeremy" class="profile-image">
 
-        <div>
+        <div class="user">
           <span>Report for</span>
-          <h2 class="name">Jeremy Robson</h2>
+          <h2 class="user__name">Jeremy Robson</h2>
         </div>
       </header>
 
       <footer>
-        <ul>
+        <ul class="menu">
           <li>Daily</li>
           <li>Weekly</li>
           <li>Monthly</li>
