section profile concluido

--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
   <div class="container">
 
     <section class="profile">
-    <header class="header-profile">
+      <header class="header-profile">
         <img src="assets/images/image-jeremy.png" alt="Jeremy" class="profile-image">
 
         <div class="user">
           <span>Report for</span>
-          <h2 class="user__name">Jeremy Robson</h2>
+          <h2 class="user-name">Jeremy Robson</h2>
         </div>
       </header>
 
-      <footer>
-        <ul class="menu">
-          <li>Daily</li>
-          <li>Weekly</li>
-          <li>Monthly</li>
+      <nav class="menu">
+        <ul>
+          <li class="item">Daily</li>
+          <li class="item active">Weekly</li>
+          <li class="item">Monthly</li>
         </ul>
-      </footer>
+      </nav>
     </section>
  
   
