retatoracao da section user

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap" rel="stylesheet">
 
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   
   <title>Frontend Mentor | Time tracking dashboard</title>
@@ -21,37 +22,21 @@
 
   <div class="container">
 
-    <section class="profile">
-<<<<<<< HEAD
-    <header class="header-profile">
-=======
-      <header class="header-profile">
->>>>>>> dev
-        <img src="assets/images/image-jeremy.png" alt="Jeremy" class="profile-image">
+    <section class="user">
+      <header class="user-header">
+        <img src="assets/images/image-jeremy.png" alt="Jeremy" class="user-image">
 
-        <div class="user">
+        <div class="user-information">
           <span>Report for</span>
-<<<<<<< HEAD
-          <h2 class="user__name">Jeremy Robson</h2>
-        </div>
-      </header>
-
-      <footer>
-        <ul class="menu">
-          <li>Daily</li>
-          <li>Weekly</li>
-          <li>Monthly</li>
-=======
           <h2 class="user-name">Jeremy Robson</h2>
         </div>
       </header>
 
-      <nav class="menu">
+      <nav class="user-menu">
         <ul>
-          <li class="item">Daily</li>
-          <li class="item active">Weekly</li>
-          <li class="item">Monthly</li>
->>>>>>> dev
+          <li class="menu-item">Daily</li>
+          <li class="menu-item active">Weekly</li>
+          <li class="menu-item">Monthly</li>
         </ul>
       </nav>
     </section>
