estilizacao do section activities

--- a/index.html
+++ b/index.html
@@ -42,16 +42,29 @@
     </section>
  
   
-  <section>
+  <section class="activities">
 
-  Work
-  5hrs <!-- daily -->
-  Previous - 7hrs <!-- daily -->
-  32hrs <!-- weekly -->
-  Previous - 36hrs <!-- weekly -->
-  103hrs <!-- monthly -->
-  Previous - 128hrs <!-- monthly -->
+    <section class="activity work">
 
+        <div class="wrapper">
+          <img src="/assets/images/icon-work.svg" alt="icon work" class="activity-image"> 
+        </div>
+      
+      <div class="activity-content">
+        <div class="activity-content_header">
+          <h4 class="content_title">Work</h4>
+          <div class="wrapper">
+            <img src="assets/images/icon-ellipsis.svg" alt="..." >
+          </div>
+        </div>
+
+        <div class="activity-content_datails">
+          <p class="content_current">32hrs</p> <!-- weekly -->
+          <p class="content_previous">Last week - 36hrs</p>  <!-- weekly --> 
+        </div>
+      </div>
+    </section>
+  
   Play
   1hr <!-- daily -->
   Previous - 2hrs <!-- daily -->
