--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,13 +12,20 @@
 
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
-  
+
   <title>Frontend Mentor | Time tracking dashboard</title>
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
 
   <div class="container">
@@ -40,75 +48,133 @@
         </ul>
       </nav>
     </section>
- 
-  
-  <section class="activities">
 
-    <section class="activity work">
 
-          <img src="/assets/images/icon-work.svg" alt="icon work" class="activity-image"> 
-      
-      <div class="activity-content">
-        <div class="activity-content_header">
-          <h4 class="content_title">Work</h4>
-          <div class="wrapper">
-            <img src="assets/images/icon-ellipsis.svg" alt="..." >
+    <section class="activities">
+
+      <section class="activity work">
+
+        <img src="/assets/images/icon-work.svg" alt="icon work" class="activity-image">
+
+        <div class="activity-content">
+          <div class="activity-content_header">
+            <h4 class="content_title">Work</h4>
+            <div class="wrapper">
+              <img src="assets/images/icon-ellipsis.svg" alt="...">
+            </div>
+          </div>
+
+          <div class="activity-content_datails">
+            <p class="content_current">32hrs</p> <!-- weekly -->
+            <p class="content_previous">Last week - 36hrs</p> <!-- weekly -->
           </div>
         </div>
+      </section>
 
-        <div class="activity-content_datails">
-          <p class="content_current">32hrs</p> <!-- weekly -->
-          <p class="content_previous">Last week - 36hrs</p>  <!-- weekly --> 
+      <section class="activity work">
+
+        <img src="/assets/images/icon-work.svg" alt="icon work" class="activity-image">
+
+        <div class="activity-content">
+          <div class="activity-content_header">
+            <h4 class="content_title">Work</h4>
+            <div class="wrapper">
+              <img src="assets/images/icon-ellipsis.svg" alt="...">
+            </div>
+          </div>
+
+          <div class="activity-content_datails">
+            <p class="content_current">32hrs</p> <!-- weekly -->
+            <p class="content_previous">Last week - 36hrs</p> <!-- weekly -->
+          </div>
         </div>
-      </div>
+      </section>
+
+      <section class="activity work">
+
+        <img src="/assets/images/icon-work.svg" alt="icon work" class="activity-image">
+
+        <div class="activity-content">
+          <div class="activity-content_header">
+            <h4 class="content_title">Work</h4>
+            <div class="wrapper">
+              <img src="assets/images/icon-ellipsis.svg" alt="...">
+            </div>
+          </div>
+
+          <div class="activity-content_datails">
+            <p class="content_current">32hrs</p> <!-- weekly -->
+            <p class="content_previous">Last week - 36hrs</p> <!-- weekly -->
+          </div>
+        </div>
+      </section>
+
+      <section class="activity work">
+
+        <img src="/assets/images/icon-work.svg" alt="icon work" class="activity-image">
+
+        <div class="activity-content">
+          <div class="activity-content_header">
+            <h4 class="content_title">Work</h4>
+            <div class="wrapper">
+              <img src="assets/images/icon-ellipsis.svg" alt="...">
+            </div>
+          </div>
+
+          <div class="activity-content_datails">
+            <p class="content_current">32hrs</p> <!-- weekly -->
+            <p class="content_previous">Last week - 36hrs</p> <!-- weekly -->
+          </div>
+        </div>
+      </section>
+
+      <section class="activity work">
+
+        <img src="/assets/images/icon-work.svg" alt="icon work" class="activity-image">
+
+        <div class="activity-content">
+          <div class="activity-content_header">
+            <h4 class="content_title">Work</h4>
+            <div class="wrapper">
+              <img src="assets/images/icon-ellipsis.svg" alt="...">
+            </div>
+          </div>
+
+          <div class="activity-content_datails">
+            <p class="content_current">32hrs</p> <!-- weekly -->
+            <p class="content_previous">Last week - 36hrs</p> <!-- weekly -->
+          </div>
+        </div>
+      </section>
+
+
+      <section class="activity work">
+
+        <img src="/assets/images/icon-work.svg" alt="icon work" class="activity-image">
+
+        <div class="activity-content">
+          <div class="activity-content_header">
+            <h4 class="content_title">Work</h4>
+            <div class="wrapper">
+              <img src="assets/images/icon-ellipsis.svg" alt="...">
+            </div>
+          </div>
+
+          <div class="activity-content_datails">
+            <p class="content_current">32hrs</p> <!-- weekly -->
+            <p class="content_previous">Last week - 36hrs</p> <!-- weekly -->
+          </div>
+        </div>
+      </section>
+
     </section>
-  
-  Play
-  1hr <!-- daily -->
-  Previous - 2hrs <!-- daily -->
-  10hrs <!-- weekly -->
-  Previous - 8hrs <!-- weekly -->
-  23hrs <!-- monthly -->
-  Previous - 29hrs <!-- monthly -->
 
-  Study
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 7hrs <!-- weekly -->
-  13hrs <!-- monthly -->
-  Previous - 19hrs <!-- monthly -->
+  </div>
 
-  Exercise
-  1hr <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 5hrs <!-- weekly -->
-  11hrs <!-- monthly -->
-  Previous - 18hrs <!-- monthly -->
-
-  Social
-  1hr <!-- daily -->
-  Previous - 3hrs <!-- daily -->
-  5hrs <!-- weekly -->
-  Previous - 10hrs <!-- weekly -->
-  21hrs <!-- monthly -->
-  Previous - 23hrs <!-- monthly -->
-
-  Self Care
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  2hrs <!-- weekly -->
-  Previous - 2hrs <!-- weekly -->
-  7hrs <!-- monthly -->
-  Previous - 11hrs <!-- monthly -->
-</section>
-
-</div>
-  
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
