--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       </header>
 
       <nav class="user-menu">
-        <ul>
-          <li class="menu-item">Daily</li>
-          <li class="menu-item active">Weekly</li>
-          <li class="menu-item">Monthly</li>
+        <ul class="menu">
+          <li data="daily" class="menu-item">Daily</li>
+          <li data="weekly" class="menu-item active">Weekly</li>
+          <li data="monthly" class="menu-item">Monthly</li>
         </ul>
       </nav>
     </section>
@@ -175,6 +175,8 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
+  <script src="scripts/menu.js"></script>
 </body>
 
 </html>
