--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
 
   <script>
     const $ = document.querySelector.bind(document);
+    const $$ = document.querySelectorAll.bind(document);
   </script>
   <script src="scripts/menu.js"></script>
 </body>
