--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     .attribution {
       font-size: 11px;
       text-align: center;
+      margin-bottom: 10px;
     }
-
     .attribution a {
       color: hsl(228, 45%, 44%);
     }
@@ -154,7 +154,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/lucasmelosilva">Lucas Melo</a>.
   </div>
 
   <script>
