modelagem da classe que irar buscar os dados

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
     const $ = document.querySelector.bind(document);
     const $$ = document.querySelectorAll.bind(document);
   </script>
+  <script src="scripts/services/busca.js"></script>
   <script src="scripts/menu.js"></script>
 </body>
 
